1999-11-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (HAVE_MLOCKALL): Deal with dec-osf5 realities
	* ntpd/refclock_ulink.c (ulink_poll): Fix cast.
	* libntp/machines.c (ntp_set_tod): Use a long* for the argument to
	stime().
	Reported by: Tom Smith <smith@cag.lkg.dec.com>

	* ntpd/ntpd.c (set_process_priority): Use whatever we have until
	something works.

	* ntpd/ntp_loopfilter.c: Keep clock_frequency changes in a temp
	variable so we can record it to loopstats (near as HMS can tell).
	From: Dave Mills <mills@udel.edu>

1999-11-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acconfig.h: RELIANTUNIX_CLOCK
	* configure.in (ac_cv_var_tickadj): RELIANTUNIX_CLOCK
	* libntp/systime.c (adj_systime): Reliant patches
	From: Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

1999-11-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_parse.c (parse_start): ASYNC_PPS_CD_NEG cleanup
	* configure.in (ac_cv_make_ntptime): OK on Linux
	From: <Ulrich.Windl@rz.uni-regensburg.de>

	* configure.in: NetBSD has PPSAPI now
	F_SETOWN is needed for NetBSD
	From: Jonathan Stone <jonathan@dsg.stanford.edu>

1999-11-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98d

	* ntpd/refclock_parse.c: Cleanup/fixes
	From: John Hay <jhay@mikom.csir.co.za>

	* ntpd/refclock_parse.c: Lose #include "ntp_select.h"
	* ntpd/ntpd.c: Lose #include "ntp_select.h"
	* ntpd/ntp_io.c: Lose #include "ntp_select.h"
	* ntpd/ntp_intres.c: Lose #include "ntp_select.h"
	* libntp/iosignal.c: Lose #include "ntp_select.h"
	* include/ntpd.h: #include "ntp_select.h" for declaration of activefds
	Reported by: Christian Krackowizer <kra1@technodat.co.at> 

1999-11-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98c

	* libntp/syssignal.c: Don't warn about SA_RESTART
	* libntp/recvbuff.c: Fix free buffer count
	From: Jeffrey C Honig <jch@bsdi.com>

	* html/pps.htm: 
	* html/howto.htm: 
	* html/confopt.htm: 
	* html/clockopt.htm: 
	* html/uthopt.htm:
	Updates.